--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite preview"
+    "start": "node server.js",
+    "server": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "lucide-react": "^0.561.0",
+    "razorpay": "^2.9.6",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
